--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "yajra/laravel-datatables-oracle": "~6.0",
-        "unisharp/laravel-filemanager": "~1.8"
+        "unisharp/laravel-filemanager": "~1.8",
+        "intervention/image": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
