--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,11 @@
         "laravel/framework": "5.1.*",
         "yajra/laravel-datatables-oracle": "~6.0",
         "unisharp/laravel-filemanager": "~1.8",
-        "intervention/image": "^2.5"
+        "intervention/image": "^2.5",
+        "dompdf/dompdf": "^0.8.3",
+        "simplesoftwareio/simple-qrcode": "^2.0",
+        "werneckbh/laravel-qr-code": "^0.1.3",
+        "codeitnowin/barcode": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
