--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "dompdf/dompdf": "^0.8.3",
         "simplesoftwareio/simple-qrcode": "^2.0",
         "werneckbh/laravel-qr-code": "^0.1.3",
-        "codeitnowin/barcode": "^3.0"
+        "codeitnowin/barcode": "^3.0",
+        "geoip/geoip": "~1.14",
+        "ramsey/uuid": "^3.8"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
